--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -194,18 +194,21 @@
                             the following social-media handles</p>
                         <ul class="list-inline banner-social-buttons">
                             <li class="list-inline-item">&nbsp;<button
+                                    id="insta-btn"
                                     class="btn btn-primary btn-lg btn-default"
                                     type="button"
-                                ><i class="fa fa-google-plus fa-fw"></i><span
+                                ><i class="fa fa-instagram fa-fw"></i><span
                                         class="network-name"
-                                    >&nbsp; Google+</span></button></li>
+                                    >&nbsp; Insta</span></button></li>
                             <li class="list-inline-item">&nbsp;<button
+                                    id="linkedin-btn"
                                     class="btn btn-primary btn-lg btn-default"
                                     type="button"
-                                ><i class="fa fa-twitter fa-fw"></i><span
+                                ><i class="fa fa-linkedin fa-fw"></i><span
                                         class="network-name"
-                                    >&nbsp;Twitter</span></button></li>
+                                    >&nbsp;LinkedIn</span></button></li>
                             <li class="list-inline-item">&nbsp;<button
+                                    id="github-btn"
                                     class="btn btn-primary btn-lg btn-default"
                                     type="button"
                                 ><i class="fa fa-github fa-fw"></i><span
